MIN_SDK 24, moved from rxJava to native streams